// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alerts /> renders Alerts correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        lg={9}
        md={9}
        sm={9}
        xs={9}
      >
        <DashboardCardTitle
          className={null}
        >
          Alerts
        </DashboardCardTitle>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        lg={3}
        md={3}
        sm={3}
        xs={3}
      >
        <DashboardCardActionsBody>
          <Dropdown
            choices={
              Array [
                "All",
                "Critical",
                "Warning",
              ]
            }
            disabled={false}
            id="alert-type"
            onChange={[Function]}
            value="All"
            withTooltips={false}
          />
        </DashboardCardActionsBody>
      </Col>
    </Row>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <AlertsBody>
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Disk inaccessible on host ip-10-0-154-62.ec2.internal (device xvda)",
              "message": "Disk is inaccessible",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephOSDDiskUnavailable",
              "severity": "critical",
            },
          }
        }
        key="alert-0"
      />
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Data recovery has been active for over 2h. Contact Support",
              "message": "Data recovery is slow",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephDataRecoveryTakingTooLong",
              "severity": "warning",
            },
          }
        }
        key="alert-1"
      />
    </AlertsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Alerts /> renders Data Recovery correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        lg={9}
        md={9}
        sm={9}
        xs={9}
      >
        <DashboardCardTitle
          className={null}
        >
          Alerts
        </DashboardCardTitle>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        lg={3}
        md={3}
        sm={3}
        xs={3}
      >
        <DashboardCardActionsBody>
          <Dropdown
            choices={
              Array [
                "All",
                "Critical",
                "Warning",
              ]
            }
            disabled={false}
            id="alert-type"
            onChange={[Function]}
            value="All"
            withTooltips={false}
          />
        </DashboardCardActionsBody>
      </Col>
    </Row>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <AlertsBody>
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Data recovery has been active for over 2h. Contact Support",
              "message": "Data recovery is slow",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephDataRecoveryTakingTooLong",
              "severity": "warning",
            },
          }
        }
        key="alert-0"
      />
    </AlertsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Alerts /> renders Disk Inaccessible correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        lg={9}
        md={9}
        sm={9}
        xs={9}
      >
        <DashboardCardTitle
          className={null}
        >
          Alerts
        </DashboardCardTitle>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        lg={3}
        md={3}
        sm={3}
        xs={3}
      >
        <DashboardCardActionsBody>
          <Dropdown
            choices={
              Array [
                "All",
                "Critical",
                "Warning",
              ]
            }
            disabled={false}
            id="alert-type"
            onChange={[Function]}
            value="All"
            withTooltips={false}
          />
        </DashboardCardActionsBody>
      </Col>
    </Row>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <AlertsBody>
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Disk inaccessible on host ip-10-0-154-62.ec2.internal (device xvda)",
              "message": "Disk is inaccessible",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephOSDDiskUnavailable",
              "severity": "critical",
            },
          }
        }
        key="alert-0"
      />
    </AlertsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Alerts /> renders Empty Alerts correctly 1`] = `""`;

exports[`<Alerts /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-9 col-md-9 col-sm-9 col-xs-9"
      >
        <h2
          class="card-pf-title kubevirt-dashboard__card-title"
        >
          Alerts
        </h2>
      </div>
      <div
        class="col-lg-3 col-md-3 col-sm-3 col-xs-3"
      >
        <div
          class="kubevirt-dashboard__actions-body"
        >
          <div
            class="btn-group btn-group-justified"
          >
            <div
              class="dropdown btn-group btn-group-default"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="kubevirt-dropdown dropdown-toggle btn btn-default"
                id="alert-type"
                role="button"
                type="button"
              >
                All 
                <span
                  class="caret"
                />
              </button>
              <ul
                aria-labelledby="alert-type"
                class="dropdown-menu"
                role="menu"
              >
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    role="menuitem"
                    tabindex="-1"
                  >
                    All
                  </a>
                </li>
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Critical
                  </a>
                </li>
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Warning
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-alert__alerts-body"
    >
      <div
        class="kubevirt-alert__item"
      >
        <span
          aria-hidden="true"
          class="fa fa-exclamation-circle kubevirt-alert__icon kubevirt-alert__icon--critical"
        />
        <div
          class="kubevirt-alert__item-message"
        >
          Disk inaccessible on host ip-10-0-154-62.ec2.internal (device xvda)
        </div>
      </div>
      <div
        class="kubevirt-alert__item"
      >
        <span
          aria-hidden="true"
          class="fa fa-exclamation-triangle kubevirt-alert__icon kubevirt-alert__icon--warning"
        />
        <div
          class="kubevirt-alert__item-message"
        >
          Data recovery has been active for over 2h. Contact Support
        </div>
      </div>
    </div>
  </div>
</div>
`;
